--- a/client/login.html
+++ b/client/login.html
@@ -16,7 +16,7 @@
         <div class="container">
             <form class="container-form">
                 <div class="container-form-h2">
-                    <h2>Pelisfree</h2>
+                    <h2><a href=""></a>Pelisfree</h2>
                 </div>
                 <div class="container-form-inputs">
                     <input type="email" placeholder="Email" required>
