pw min 4 caracteres

--- a/client/registro.html
+++ b/client/registro.html
@@ -32,9 +32,10 @@
                 <form action="" class="form-container">
                     <label for="email">Email</label>
                     <span id="emailSpan"></span>
-                    <input type="password" placeholder="Ingresa tu contraseña">
+                    <input type="password" placeholder="Ingresa tu contraseña" id="inputPw">
+                    <span id="error"></span>
                     <a href="#">¿Olvidaste tu contraseña?</a>
-                    <button type="submit">Crear cuenta</button>
+                    <button type="submit" id="btnSubmit">Crear cuenta</button>
                 </form>
             </div>
         </main>
