--- a/client/registro.html
+++ b/client/registro.html
@@ -29,7 +29,7 @@
 
 
             <div class="div-container-form">
-                <form action="" class="form-container">
+                <form class="form-container" id="registroForm">
                     <label for="email">Email</label>
                     <span id="emailSpan"></span>
                     <input type="password" placeholder="Ingresa tu contraseña" id="inputPw">
@@ -43,5 +43,5 @@
 
 
 </body>
-<script src="js/controllers/loginController.js"></script>
+<script src="js/controllers/registroController.js"></script>
 </html>
