--- a/client/login.html
+++ b/client/login.html
@@ -14,13 +14,14 @@
             <img src="img/login.jpeg" alt="">
         </div>
         <div class="container">
-            <form class="container-form">
+            <form class="container-form" id="registroForm">
                 <div class="container-form-h2">
                     <h2><a href=""></a>Pelisfree</h2>
                 </div>
                 <div class="container-form-inputs">
-                    <input type="email" placeholder="Email" required>
-                    <input type="password" placeholder="Ingrese su contraseña..." required>
+                    <input type="email" placeholder="Email" required id="email">
+                    <input type="password" placeholder="Ingrese su contraseña..." required id="password">
+                    <div id="error-message" class="error-message"></div>
                     <button type="submit">Iniciar sesión</button>
                     <div class="container-form-inputs-check">
                         <div class="container-form-inputs-check-checkbox">
@@ -43,4 +44,5 @@
     </div>
 </body>
 
+<script src="./js/login.js"></script>
 </html>
