--- a/client/registro.html
+++ b/client/registro.html
@@ -33,7 +33,7 @@
                     <label for="email">Email</label>
                     <span id="emailSpan"></span>
                     <input type="password" placeholder="Ingresa tu contraseña" id="inputPw">
-                    <span id="error"></span>
+                    <div id="error-message" class="error-message"></div>
                     <a href="#">¿Olvidaste tu contraseña?</a>
                     <button type="submit" id="btnSubmit">Crear cuenta</button>
                 </form>
