--- a/client/pelisFree.html
+++ b/client/pelisFree.html
@@ -33,7 +33,7 @@
                         <li><a href="#">Niños</a></li>
                         <li><a href="#">DVD</a></li>
                         <li><a href="#"><img src="img/Multimedia/campana.png" alt="Campana"></a></li>
-                        <li class="usuario"><a href="#"><img src="img/Multimedia/user.png" alt="Usuario"></a></li>
+                        <li class="cerrar-sesion"><a href="/index.html"><img src="img/Multimedia/cerrar-sesion.png" alt="Usuario"></a></li>
                     </ul>
                 </nav>
             </div>
